# atlas

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  Project and Plan.md  README.md  pyproject.toml
docs/: setup_windows.md
migrations/: env.py
migrations/versions/: 20260419_0001_enable_pgvector.py  20260420_0002_conversations.py
scripts/: chat_cli.py  reset_db.py
src/atlas/: __init__.py  config.py  logging.py  main.py
src/atlas/agents/: __init__.py
src/atlas/api/: deps.py
src/atlas/api/routes/: chat.py  conversations.py  health.py
src/atlas/api/schemas/: chat.py
src/atlas/db/: __init__.py  base.py  session.py
src/atlas/integrations/: __init__.py
src/atlas/models/: __init__.py  conversation.py
src/atlas/schemas/: __init__.py
src/atlas/services/: chat_service.py
src/atlas/services/llm/: __init__.py  base.py  fake_provider.py  gemini.py  groq.py  tokens.py  types.py
src/atlas/services/prompts/: system.py
src/atlas/workers/: __init__.py
tests/: conftest.py
tests/integration/: test_chat.py  test_health.py
tests/unit/: test_config.py  test_gemini_provider.py  test_groq_provider.py  test_llm_factory.py  test_message_roundtrip.py
